--- a/index.html
+++ b/index.html
@@ -132,36 +132,19 @@
             </div>
           </div>
         </div>
+       
         <div class="main_box center">
           <div class="icon center">
-            <i class="fab fa-whatsapp"></i>
+            <i class="fas fa-university"></i>
           </div>
           <div class="box">
-            <h1>Whatsapp UI Clone App</h1>
+            <h1>Banking Application</h1>
             <p>
-              Whatsapp UI Clone App using Flutter.
+              Mobile Banking App using Flutter.
             </p>
             <div class="links">
               <a
-                href="https://github.com/cmanjunathan45/whatsapp-clone-flutter"
-                target="_blank_"
-                >Github Repo<i class="fab fa-github"></i
-              ></a>
-            </div>
-          </div>
-        </div>
-        <div class="main_box center">
-          <div class="icon center">
-            <i class="fab fa-instagram"></i>
-          </div>
-          <div class="box">
-            <h1>Instagram UI Clone App</h1>
-            <p>
-              Instagram UI Clone App using Flutter.
-            </p>
-            <div class="links">
-              <a
-                href="https://github.com/cmanjunathan45/Instagram-Clone-Flutter"
+                href="https://github.com/cmanjunathan45/GRIP-bank/tree/master"
                 target="_blank_"
                 >Github Repo<i class="fab fa-github"></i
               ></a>
