--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p>Front-End Developer & Python Developer</p>
         
         <a href="cyber_security.html" class="btn">Cyber Security  <i class="fas fa-arrow-right"></i></a>
-        <a href="Myresume.pdf" class="btn" download>Resume <i class="fas fa-file-pdf"></i></a>
+        <a href="https://www.canva.com/design/DAEc7ujMuks/6qmj_vJpPu_AdH4avk5a7A/view" class="btn" download>Resume <i class="fas fa-file-pdf"></i></a>
 
       </div>
       
