--- a/cyber_security.html
+++ b/cyber_security.html
@@ -220,6 +220,18 @@
             <p>Projects</p>
           </a>
       </div>
+      <div class="box">
+          <a href="#Experience" class=" links center"> 
+           <i class="fas fa-briefcase"></i>
+            <p>Experience</p>
+          </a>
+      </div>
+      <div class="box">
+          <a href="#Achievements" class=" links center"> 
+           <i class="fas fa-trophy"></i>
+            <p>Achievements</p>
+          </a>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
