--- a/cyber_security.html
+++ b/cyber_security.html
@@ -197,12 +197,12 @@
 
     <!-- Toggle -->
     <div class="toggle center active" id="toggle">
-<!--       <div class="box center">
+      <div class="box center">
           <a href="#main" class="links center"> 
             <i class="fas fa-home"></i>
             <p>Home</p>
           </a>
-      </div> -->
+      </div>
       <div class="box center">
           <a href="#About" class="links center"> 
             <i class="fas fa-address-card"></i>
