--- a/cyber_security.html
+++ b/cyber_security.html
@@ -213,6 +213,84 @@
         </div>
       </div>
     </section>
+<!-- Achievements -->
+    <section class="projects center" id="Achievements">
+      <h1 class="project_heading">Achievements</h1>
+      <div class="container center">
+        <div class="main_box center">
+          <div class="icon center">
+            <i class="fas fa-award"></i>
+          </div>
+          <div class="box">
+            <h1>Wall of Fame</h1>
+            <p>
+            Shopclues Website
+            </p>
+            <div class="links">
+              <a
+                href="https://www.shopclues.com/"
+                target="_blank_"
+                >Website<i class="fas fa-link"></i></a>
+            </div>
+          </div>
+        </div>
+        
+        
+        <div class="main_box center">
+          <div class="icon center">
+            <i class="fas fa-handshake"></i>
+          </div>
+          <div class="box">
+            <h1>Thanks Recevied</h1>
+            <p>
+            NCIIPC(Indian Government)
+            </p>
+            <div class="links">
+              <a
+                href="https://nciipc.gov.in/"
+                target="_blank_"
+               >Website<i class="fas fa-link"></i></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="main_box center">
+          <div class="icon center">
+            <i class="fas fa-handshake"></i>
+          </div>
+          <div class="box">
+            <h1>Thanks Recevied</h1>
+            <p>
+            Library Of Congress(USA Government)
+            </p>
+            <div class="links">
+              <a
+                href="https://www.loc.gov/"
+                target="_blank_"
+               >Website<i class="fas fa-link"></i></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="main_box center">
+          <div class="icon center">
+            <i class="fas fa-handshake"></i>
+          </div>
+          <div class="box">
+            <h1>Thanks Recevied</h1>
+            <p>
+            Volkswagen India
+            </p>
+            <div class="links">
+              <a
+                href="https://volkswagen.co.in/"
+                target="_blank_"
+               >Website<i class="fas fa-link"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- footer -->
     <footer class="center">
