--- a/cyber_security.html
+++ b/cyber_security.html
@@ -279,6 +279,24 @@
           <div class="box">
             <h1>Thanks Recevied</h1>
             <p>
+            NASA
+            </p>
+            <div class="links">
+              <a
+                href="https://www.nasa.gov/"
+                target="_blank_"
+               >Website<i class="fas fa-link"></i></a>
+            </div>
+          </div>
+        </div>
+        
+        <div class="main_box center">
+          <div class="icon center">
+            <i class="fas fa-handshake"></i>
+          </div>
+          <div class="box">
+            <h1>Thanks Recevied</h1>
+            <p>
             Volkswagen India
             </p>
             <div class="links">
